--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 					>
 					<ul class="header-nav-list">
 						<li class="header-nav-list-item">
-							<a class="nav-list-item-link" href="./index.html">Studio</a>
+							<a class="nav-list-item-link current" href="./index.html"
+								>Studio</a
+							>
 						</li>
 						<li class="header-nav-list-item">
 							<a class="nav-list-item-link" href="">Portfolio</a>
@@ -73,6 +75,11 @@
 					</h2>
 					<ul class="features-list">
 						<li class="features-list-item">
+							<div class="features-list-icon-container">
+								<svg class="features-list-icon" width="64" hight="64">
+									<use href="./images/icons.svg#antenna"></use>
+								</svg>
+							</div>
 							<h3 class="features-list-item-header">Strategy</h3>
 							<p class="features-list-item-text">
 								Our goal is to identify the business problem to walk away with
@@ -80,6 +87,11 @@
 							</p>
 						</li>
 						<li class="features-list-item">
+							<div class="features-list-icon-container">
+								<svg class="features-list-icon" width="64" hight="64">
+									<use href="./images/icons.svg#clock"></use>
+								</svg>
+							</div>
 							<h3 class="features-list-item-header">Punctuality</h3>
 							<p class="features-list-item-text">
 								Bring the key message to the brand's audience for the best price
@@ -87,6 +99,11 @@
 							</p>
 						</li>
 						<li class="features-list-item">
+							<div class="features-list-icon-container">
+								<svg class="features-list-icon" width="64" hight="64">
+									<use href="./images/icons.svg#diagram"></use>
+								</svg>
+							</div>
 							<h3 class="features-list-item-header">Diligence</h3>
 							<p class="features-list-item-text">
 								Research and confirm brands with the strongest digital growth
@@ -94,6 +111,11 @@
 							</p>
 						</li>
 						<li class="features-list-item">
+							<div class="features-list-icon-container">
+								<svg class="features-list-icon" width="64" hight="64">
+									<use href="./images/icons.svg#astronaut"></use>
+								</svg>
+							</div>
 							<h3 class="features-list-item-header">Technologies</h3>
 							<p class="features-list-item-text">
 								Design practice focused on digital experiences. We bring forth a
@@ -117,6 +139,36 @@
 							<div class="our-team-content-container">
 								<h3 class="our-team-list-item-content-header">Mark Guerrero</h3>
 								<p class="our-team-list-item-content-text">Product Designer</p>
+								<ul class="our-team-list-icons">
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="our-team-list-item">
@@ -126,6 +178,36 @@
 								<p class="our-team-list-item-content-text">
 									Frontend Developer
 								</p>
+								<ul class="our-team-list-icons">
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="our-team-list-item">
@@ -138,6 +220,36 @@
 							<div class="our-team-content-container">
 								<h3 class="our-team-list-item-content-header">Camila Garcia</h3>
 								<p class="our-team-list-item-content-text">Marketing</p>
+								<ul class="our-team-list-icons">
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 						<li class="our-team-list-item">
@@ -150,6 +262,36 @@
 							<div class="our-team-content-container">
 								<h3 class="our-team-list-item-content-header">Daniel Wilson</h3>
 								<p class="our-team-list-item-content-text">UI Designer</p>
+								<ul class="our-team-list-icons">
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#instagram"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#twitter"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#facebook"></use>
+											</svg>
+										</a>
+									</li>
+									<li class="our-team-icon-item">
+										<a href="#" class="our-team-icon-link">
+											<svg width="16" height="16" class="our-team-icon">
+												<use href="./images/icons.svg#linkedin"></use>
+											</svg>
+										</a>
+									</li>
+								</ul>
 							</div>
 						</li>
 					</ul>
