--- a/index.html
+++ b/index.html
@@ -139,31 +139,31 @@
 							<div class="our-team-content-container">
 								<h3 class="our-team-list-item-content-header">Mark Guerrero</h3>
 								<p class="our-team-list-item-content-text">Product Designer</p>
-								<ul class="our-team-list-icons">
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+								<ul class="list-icons">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -178,31 +178,31 @@
 								<p class="our-team-list-item-content-text">
 									Frontend Developer
 								</p>
-								<ul class="our-team-list-icons">
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+								<ul class="list-icons">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -220,31 +220,31 @@
 							<div class="our-team-content-container">
 								<h3 class="our-team-list-item-content-header">Camila Garcia</h3>
 								<p class="our-team-list-item-content-text">Marketing</p>
-								<ul class="our-team-list-icons">
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+								<ul class="list-icons">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -262,31 +262,31 @@
 							<div class="our-team-content-container">
 								<h3 class="our-team-list-item-content-header">Daniel Wilson</h3>
 								<p class="our-team-list-item-content-text">UI Designer</p>
-								<ul class="our-team-list-icons">
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+								<ul class="list-icons">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="our-team-icon-item">
-										<a href="#" class="our-team-icon-link">
-											<svg width="16" height="16" class="our-team-icon">
+									<li class="icon-item">
+										<a href="#" class="icon-link">
+											<svg width="16" height="16" class="icon">
 												<use href="./images/icons.svg#linkedin"></use>
 											</svg>
 										</a>
@@ -302,72 +302,114 @@
 					<h2 class="portfolio-header section-header">Our Portfolio</h2>
 					<ul class="portfolio-list">
 						<li class="portfolio-list-item">
-							<img
-								src="./images/banking.jpg"
-								alt="banking"
-								width="360"
-								height="300"
-							/>
+							<div class="overlay-container">
+								<img
+									src="./images/banking.jpg"
+									alt="banking"
+									width="360"
+									height="300"
+								/>
+								<p class="overlay-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
 							<div class="portfolio-list-item-content-container">
 								<h3 class="portfolio-list-item-header">Banking App</h3>
 								<p class="portfolio-list-item-text">App</p>
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<img
-								src="./images/cashless.jpg"
-								alt="cashless"
-								width="360"
-								height="300"
-							/>
+							<div class="overlay-container">
+								<img
+									src="./images/cashless.jpg"
+									alt="banking"
+									width="360"
+									height="300"
+								/>
+								<p class="overlay-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
 							<div class="portfolio-list-item-content-container">
 								<h3 class="portfolio-list-item-header">Cashless Payment</h3>
 								<p class="portfolio-list-item-text">Marketing</p>
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<img
-								src="./images/meditation.jpg"
-								alt="meditation"
-								width="360"
-								height="300"
-							/>
+							<div class="overlay-container">
+								<img
+									src="./images/meditation.jpg"
+									alt="banking"
+									width="360"
+									height="300"
+								/>
+								<p class="overlay-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
 							<div class="portfolio-list-item-content-container">
 								<h3 class="portfolio-list-item-header">Meditation App</h3>
 								<p class="portfolio-list-item-text">App</p>
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<img
-								src="./images/taxi.jpg"
-								alt="taxi"
-								width="360"
-								height="300"
-							/>
+							<div class="overlay-container">
+								<img
+									src="./images/taxi.jpg"
+									alt="banking"
+									width="360"
+									height="300"
+								/>
+								<p class="overlay-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
 							<div class="portfolio-list-item-content-container">
 								<h3 class="portfolio-list-item-header">Taxi Service</h3>
 								<p class="portfolio-list-item-text">Marketing</p>
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<img
-								src="./images/screen.jpg"
-								alt="screen illustrations"
-								width="360"
-								height="300"
-							/>
+							<div class="overlay-container">
+								<img
+									src="./images/screen.jpg"
+									alt="banking"
+									width="360"
+									height="300"
+								/>
+								<p class="overlay-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
 							<div class="portfolio-list-item-content-container">
 								<h3 class="portfolio-list-item-header">Screen Illustrations</h3>
 								<p class="portfolio-list-item-text">Design</p>
 							</div>
 						</li>
 						<li class="portfolio-list-item">
-							<img
-								src="./images/courses.jpg"
-								alt="courses"
-								width="360"
-								height="300"
-							/>
+							<div class="overlay-container">
+								<img
+									src="./images/courses.jpg"
+									alt="banking"
+									width="360"
+									height="300"
+								/>
+								<p class="overlay-text">
+									14 Stylish and User-Friendly App Design Concepts · Task
+									Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+									· Cloud Storage App
+								</p>
+							</div>
 							<div class="portfolio-list-item-content-container">
 								<h3 class="portfolio-list-item-header">Online Courses</h3>
 								<p class="portfolio-list-item-text">Marketing</p>
@@ -378,14 +420,49 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<div class="container">
-				<a class="logo" href="./index.html"
-					>Web<span class="logo-style">Studio</span></a
-				>
-				<p class="footer-text">
-					Increase the flow of customers and sales for your business with
-					digital marketing &amp; growth solutions.
-				</p>
+			<div class="container footer-container">
+				<div class="footer-content">
+					<a class="logo" href="./index.html"
+						>Web<span class="logo-style">Studio</span></a
+					>
+					<p class="footer-text">
+						Increase the flow of customers and sales for your business with
+						digital marketing &amp; growth solutions.
+					</p>
+				</div>
+				<div class="footer-icons-container">
+					<h4 class="footer-icons-header">Social media</h4>
+					<ul class="list-icons">
+						<li class="icon-item">
+							<a href="#" class="icon-link">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#instagram"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="icon-item">
+							<a href="#" class="icon-link">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#twitter"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="icon-item">
+							<a href="#" class="icon-link">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="icon-item">
+							<a href="#" class="icon-link">
+								<svg width="24" height="24" class="icon">
+									<use href="./images/icons.svg#linkedin"></use>
+								</svg>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</footer>
 	</body>
