--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<ul class="features-list">
 						<li class="features-list-item">
 							<div class="features-list-icon-container">
-								<svg class="features-list-icon" width="64" hight="64">
+								<svg class="features-list-icon" width="64" height="64">
 									<use href="./images/icons.svg#antenna"></use>
 								</svg>
 							</div>
@@ -88,7 +88,7 @@
 						</li>
 						<li class="features-list-item">
 							<div class="features-list-icon-container">
-								<svg class="features-list-icon" width="64" hight="64">
+								<svg class="features-list-icon" width="64" height="64">
 									<use href="./images/icons.svg#clock"></use>
 								</svg>
 							</div>
@@ -100,7 +100,7 @@
 						</li>
 						<li class="features-list-item">
 							<div class="features-list-icon-container">
-								<svg class="features-list-icon" width="64" hight="64">
+								<svg class="features-list-icon" width="64" height="64">
 									<use href="./images/icons.svg#diagram"></use>
 								</svg>
 							</div>
@@ -112,7 +112,7 @@
 						</li>
 						<li class="features-list-item">
 							<div class="features-list-icon-container">
-								<svg class="features-list-icon" width="64" hight="64">
+								<svg class="features-list-icon" width="64" height="64">
 									<use href="./images/icons.svg#astronaut"></use>
 								</svg>
 							</div>
@@ -431,7 +431,7 @@
 					</p>
 				</div>
 				<div class="footer-icons-container">
-					<h4 class="footer-icons-header">Social media</h4>
+					<p class="footer-icons-header">Social media</p>
 					<ul class="list-icons">
 						<li class="icon-item">
 							<a href="#" class="icon-link">
